[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/elevator/Elevator.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/elevator/exit/ExitElevator.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/ElevatorDing.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 4 )

[node name="ExitElevator" type="Node2D"]
script = ExtResource( 2 )

[node name="Elevator" parent="." instance=ExtResource( 1 )]
door_open = true
player_visible = false

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false
position = Vector2( 0, -21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="PlayerDetector" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -11 )
collision_layer = 0
collision_mask = 32768

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 2 )

[node name="PlayerTweenTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DingAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="timeout" from="PlayerTweenTimer" to="." method="_on_PlayerTweenTimer_timeout"]
